fix responsive wrapping

--- a/projects/angular/src/accordion/_accordion.clarity.scss
+++ b/projects/angular/src/accordion/_accordion.clarity.scss
@@ -114,7 +114,8 @@
   .clr-accordion-header-has-description {
     .clr-accordion-title {
       min-width: accordion-variables.$clr-accordion-step-title-min-width;
-      max-width: accordion-variables.$clr-accordion-step-title-min-width;
+      max-width: mixins.baselinePx(264);
+      width: 100%;
       @media (min-width: accordion-variables.$clr-accordion-responsive-breakpoint) {
         margin-left: tokens.$cds-global-space-7;
       }
